# textadept-lsp

./: CMakeLists.txt  LICENSE  Makefile  README.md  init.lua  ldoc.patch  server.lua  tadoc.lua
.github/workflows/: release.yml
doc/: _G.luadoc  bit32.luadoc  coroutine.luadoc  debug.luadoc  io.luadoc  lfs.luadoc  lpeg.luadoc  math.luadoc  os.luadoc  package.luadoc  regex.luadoc  string.luadoc  table.luadoc  utf8.luadoc
